Updated by task 'AUTO_TM_MT_1758129382846' Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/release-notes.en/commit/d8950d18ff5f4bf60ef3a32bfb0cd51b2b132350

--- a/c-legacy-releases/2023/08092023.md
+++ b/c-legacy-releases/2023/08092023.md
@@ -1,15 +1,15 @@
 ---
-title: 版本注意事項 - 2023 年 8 月
+title: Central發行說明 — 2023年8月
 description: 閱讀 Adobe  [!DNL Experience Cloud]  產品和服務的最新發行說明。了解有關 Experience League 即將舉辦的活動和新文件。探索  [!DNL Experience Cloud]  應用程式的最新教學課程和其他課程。
 doc-type: release notes
 last-update: August 2023
 author: mfrei
 mini-toc-levels: 2
 exl-id: f61fcb42-2eba-4993-9543-2b316ae718a6
-source-git-commit: 36e91cd8e7e394651718c44969a077f58beee4c6
+source-git-commit: 6fb2d115be0b2d8dacd5b24218b0c647fad782b2
 workflow-type: tm+mt
-source-wordcount: '4252'
-ht-degree: 100%
+source-wordcount: '4253'
+ht-degree: 99%
 
 ---
 
@@ -25,7 +25,7 @@ ht-degree: 100%
 
 **需要協助嗎?**
 
-登入 [Experience League](https://experienceleague.adobe.com/zh-hant#home)，在 Adobe 自助資源庫中自訂您的搜尋體驗。 瀏覽所有級別和角色的[產品文件](https://experienceleague.adobe.com/docs/?lang=zh-Hant)、[教學課程影片](https://experienceleague.adobe.com/docs/home-tutorials.html?lang=zh-Hant)、[課程](https://experienceleague.adobe.com/zh-hant#courses)和[活動](https://experienceleague.adobe.com/events/?lang=zh-Hant)。向您的同業[社群](https://experienceleaguecommunities.adobe.com/?profile.language=en)提問，並在您最需要時獲得專家[支援](https://experienceleague.adobe.com/zh-hant?support-tab=home#support)。
+登入 [Experience League](https://experienceleague.adobe.com/#home)，在 Adobe 自助資源庫中自訂您的搜尋體驗。 瀏覽所有級別和角色的[產品文件](https://experienceleague.adobe.com/docs/)、[教學課程影片](https://experienceleague.adobe.com/docs/home-tutorials.html?lang=zh-Hant)、[課程](https://experienceleague.adobe.com/#courses)和[活動](https://experienceleague.adobe.com/events/)。向您的同業[社群](https://experienceleaguecommunities.adobe.com/?profile.language=en)提問，並在您最需要時獲得專家[支援](https://experienceleague.adobe.com/?support-tab=home#support)。
 
 ## 產品發行更新和活動
 
@@ -62,7 +62,7 @@ ht-degree: 100%
 
 ### Experience Cloud 應用程式的整合設定教學課程 {#integrations}
 
-鄭重推出我們針對 Experience League 的全新 [Experience Cloud 應用程式整合教學課程首頁](https://experienceleague.adobe.com/docs/integrations-learn/experience-cloud/overview.html?lang=zh-Hant&)！
+鄭重推出我們針對 Experience League 的全新 [Experience Cloud 應用程式整合教學課程首頁](https://experienceleague.adobe.com/docs/integrations-learn/experience-cloud/overview.html?)！
 
 瞭解最常見的 Experience Cloud 應用程式整合。您可依照[解決方案](https://experienceleague.adobe.com/docs/integrations-learn/experience-cloud/solution-categories/overview.html?lang=zh-Hant)或[應用程式](https://experienceleague.adobe.com/docs/integrations-learn/experience-cloud/integrations-between-applications/overview.html?lang=zh-Hant)瀏覽整合教學課程。
 
@@ -70,7 +70,7 @@ ht-degree: 100%
 
 +++即將推出的 Experience League 活動
 
-請查看 [Experience League 活動](https://experienceleague.adobe.com/events/?lang=zh-Hant)取得即將到來的活動和隨選即播的過去活動的完整時間表。
+請查看 [Experience League 活動](https://experienceleague.adobe.com/events/)取得即將到來的活動和隨選即播的過去活動的完整時間表。
 
 +++
 
@@ -78,7 +78,7 @@ ht-degree: 100%
 
 請注意，所有 Adobe 認證候選者！造訪 Experience League 上的 Experience Cloud [認證](https://experienceleague.adobe.com/docs/certification/program/overview.html?lang=zh-Hant)網站。
 
-+++詳細資訊
++++詳細資料
 
 認證網站是所有 [!DNL Experience Cloud] 認證相關內容的一站式商店，且會定期更新：
 
@@ -94,9 +94,9 @@ ht-degree: 100%
 
 了解 [!DNL Adobe System Status] 的最新功能和更新。
 
-+++詳細資訊
++++詳細資料
 
-[!DNL Adobe System Status] 提供有關 Adobe 產品的詳細資訊、狀態更新和電子郵件通知。收到有關服務中斷、作業中斷和維護事件的通知。請前往 [status.adobe.com](https://status.adobe.com/) 了解詳情。
+[!DNL Adobe System Status] 提供有關 Adobe 產品和服務的詳細資訊、狀態更新和電子郵件通知。收到有關服務中斷、作業中斷和維護事件的通知。請前往 [status.adobe.com](https://status.adobe.com/) 了解詳情。
 
 發行日期：**2023 年 7 月 18 日**
 
@@ -116,9 +116,9 @@ ht-degree: 100%
 
 了解有關 [!DNL Experience Cloud] 介面。管理產品和使用者、配置輪廓的設定和偏好設定、搜尋 Experience Cloud 物件以及管理 Cookie。
 
-+++詳細資訊
++++詳細資料
 
-有關 Experience Cloud 統一介面元件的說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/docs/core-services/interface/experience-cloud.html?lang=zh-Hant) (包含[!UICONTROL 客戶屬性]、[!DNL Experience Cloud Assets]和[!UICONTROL 客群])。
+如需有關 Experience Cloud 統一介面元件的說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/docs/core-services/interface/experience-cloud.html?lang=zh-Hant) (包含[!UICONTROL 客戶屬性]、[!DNL Experience Cloud Assets]和[!UICONTROL 客群])。
 
 +++
 
@@ -126,7 +126,7 @@ ht-degree: 100%
 
 尋找 [!DNL Experience Platform] 和 [!UICONTROL Mobile SDK] 的最新發行資訊和新文件。檢視 Experience League 上的新教學課程和知識庫。
 
-+++詳細資訊
++++詳細資料
 
 * [[!DNL Experience Platform] 發行說明](https://experienceleague.adobe.com/docs/experience-platform/release-notes/latest.html?lang=zh-Hant)
 
@@ -138,11 +138,11 @@ New videos, tutorials, or courses published for Adobe [!DNL Experience Platform]
 
 | Published | Applications | Name | Type | Description |
 | ----------| ---------- | ---------- | ---------- |---------- |
-| August 2023 | Applications | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) | Video | Description |
-| August 2023 | Applications | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) | Video | Description |
-| August 2023 | Applications | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) | Video | Description |
-| August 2023 | Applications | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) | Video | Description |
-| August 2023 | Applications | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) | Video | Description |
+| August 2023 | Applications | [linktext](https://experienceleague.adobe.com/?lang=en#home) | Video | Description |
+| August 2023 | Applications | [linktext](https://experienceleague.adobe.com/?lang=en#home) | Video | Description |
+| August 2023 | Applications | [linktext](https://experienceleague.adobe.com/?lang=en#home) | Video | Description |
+| August 2023 | Applications | [linktext](https://experienceleague.adobe.com/?lang=en#home) | Video | Description |
+| August 2023 | Applications | [linktext](https://experienceleague.adobe.com/?lang=en#home) | Video | Description |
 
 -->
 
@@ -158,11 +158,11 @@ New videos, tutorials, or courses published for Adobe [!DNL Real-Time Customer D
 
 | Published | Applications | Name | Type | Description |
 | ----------| ---------- | ---------- | ---------- |---------- |
-| August 2023 | Applications | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) | Video | Description |
-| August 2023 | Applications | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) | Video | Description |
-| August 2023 | Applications | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) | Video | Description |
-| August 2023 | Applications | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) | Video | Description |
-| August 2023 | Applications | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) | Video | Description |
+| August 2023 | Applications | [linktext](https://experienceleague.adobe.com/?lang=en#home) | Video | Description |
+| August 2023 | Applications | [linktext](https://experienceleague.adobe.com/?lang=en#home) | Video | Description |
+| August 2023 | Applications | [linktext](https://experienceleague.adobe.com/?lang=en#home) | Video | Description |
+| August 2023 | Applications | [linktext](https://experienceleague.adobe.com/?lang=en#home) | Video | Description |
+| August 2023 | Applications | [linktext](https://experienceleague.adobe.com/?lang=en#home) | Video | Description |
 
 +++ 
 -->
@@ -171,7 +171,7 @@ New videos, tutorials, or courses published for Adobe [!DNL Real-Time Customer D
 
 如需 [!DNL Adobe Analytics] 和 [!DNL AppMeasurement] 的最新發行資訊查看 Experience League 上的最新教學課程與其他課程。
 
-+++詳細資訊
++++詳細資料
 
 [!DNL Analytics] 發行日期：**2023 年 8 月 9 日**
 
@@ -191,13 +191,13 @@ New video tutorials, articles, and courses published for Adobe [!DNL Analytics].
 
 | Published | Name | Type | Description |
 | -----------| ---------- | ---------- | ---------- |
-| August 2023 | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) |Video | Description |
-| August 2023 | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) |Video | Description |
-| August 2023 | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) |Video | Description |
-| August 2023 | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) |Video | Description |
-| August 2023 | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) |Video | Description |
-| August 2023 | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) |Video | Description |
-| August 2023 | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) |Video | Description |
+| August 2023 | [linktext](https://experienceleague.adobe.com/?lang=en#home) |Video | Description |
+| August 2023 | [linktext](https://experienceleague.adobe.com/?lang=en#home) |Video | Description |
+| August 2023 | [linktext](https://experienceleague.adobe.com/?lang=en#home) |Video | Description |
+| August 2023 | [linktext](https://experienceleague.adobe.com/?lang=en#home) |Video | Description |
+| August 2023 | [linktext](https://experienceleague.adobe.com/?lang=en#home) |Video | Description |
+| August 2023 | [linktext](https://experienceleague.adobe.com/?lang=en#home) |Video | Description |
+| August 2023 | [linktext](https://experienceleague.adobe.com/?lang=en#home) |Video | Description |
 
 ### Adobe [!DNL Analytics] support knowledge base{#kb-analytics}
 
@@ -210,7 +210,7 @@ New articles and updates to existing articles for [!DNL Analytics].
 
 如需 [!DNL Customer Journey Analytics] 的最新發行資訊。查看 Experience League 上的最新教學課程與其他課程。
 
-+++詳細資訊
++++詳細資料
 
 [!DNL Customer Journey Analytics] 發行日期：**2023 年 8 月 9 日**
 
@@ -224,13 +224,13 @@ New videos, tutorials, or courses published for [!DNL Customer Journey Analytics
 
 | Published | Name | Type | Description |
 | -----------| ---------- | ---------- | ---------- |
-| August 2023 | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) |Video | Description |
-| August 2023 | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) |Video | Description |
-| August 2023 | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) |Video | Description |
-| August 2023 | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) |Video | Description |
-| August 2023 | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) |Video | Description |
-| August 2023 | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) |Video | Description |
-| August 2023 | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) |Video | Description |-->
+| August 2023 | [linktext](https://experienceleague.adobe.com/?lang=en#home) |Video | Description |
+| August 2023 | [linktext](https://experienceleague.adobe.com/?lang=en#home) |Video | Description |
+| August 2023 | [linktext](https://experienceleague.adobe.com/?lang=en#home) |Video | Description |
+| August 2023 | [linktext](https://experienceleague.adobe.com/?lang=en#home) |Video | Description |
+| August 2023 | [linktext](https://experienceleague.adobe.com/?lang=en#home) |Video | Description |
+| August 2023 | [linktext](https://experienceleague.adobe.com/?lang=en#home) |Video | Description |
+| August 2023 | [linktext](https://experienceleague.adobe.com/?lang=en#home) |Video | Description |-->
 
 +++
 
@@ -246,7 +246,7 @@ New videos, tutorials, or courses published for [!DNL Customer Journey Analytics
 
 [!DNL Audience Manager]的更新和新內容。
 
-+++詳細資訊
++++詳細資料
 
 從 2023 年 7 月開始，Adobe 已停止開發 [!DNL Data Integration Library (DIL)] 和 [!DNL DIL] 擴充功能。
 現有客戶可以繼續使用他們實施的 [!DNL DIL]。不過，Adobe 從現在起不會開發 [!DNL DIL]。鼓勵客戶評估 [Experience Platform Web SDK](https://experienceleague.adobe.com/docs/experience-platform/edge/home.html?lang=zh-Hant)，以確定他們的長期資料收集策略。若客戶希望在 2023 年 7 月後實施新資料收集整合，他們應該使用 [Experience Platform Web SDK](https://experienceleague.adobe.com/docs/experience-platform/edge/home.html?lang=zh-Hant)。
@@ -260,17 +260,17 @@ New articles and updates to existing articles for [!DNL Audience Manager].
 
 | Published | Name | Type | Description |
 | -----------| ---------- | ---------- | ---------- |
-| August 2023 | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) |Video | Description |
-| August 2023 | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) |Video | Description |
-| August 2023 | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) |Video | Description |
-| August 2023 | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) |Video | Description |
-| August 2023 | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) |Video | Description |
-| August 2023 | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) |Video | Description |
-| August 2023 | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) |Video | Description |
+| August 2023 | [linktext](https://experienceleague.adobe.com/?lang=en#home) |Video | Description |
+| August 2023 | [linktext](https://experienceleague.adobe.com/?lang=en#home) |Video | Description |
+| August 2023 | [linktext](https://experienceleague.adobe.com/?lang=en#home) |Video | Description |
+| August 2023 | [linktext](https://experienceleague.adobe.com/?lang=en#home) |Video | Description |
+| August 2023 | [linktext](https://experienceleague.adobe.com/?lang=en#home) |Video | Description |
+| August 2023 | [linktext](https://experienceleague.adobe.com/?lang=en#home) |Video | Description |
+| August 2023 | [linktext](https://experienceleague.adobe.com/?lang=en#home) |Video | Description |
 
 {style="table-layout:auto"}
 
-For self-help resources, see [Audience Manager documentation and tutorials](https://experienceleague.adobe.com/docs/audience-manager.html?lang=zh-Hant) on Experience League.
+For self-help resources, see [Audience Manager documentation and tutorials](https://experienceleague.adobe.com/docs/audience-manager.html) on Experience League.
 
  -->
 
@@ -278,7 +278,7 @@ For self-help resources, see [Audience Manager documentation and tutorials](http
 
 Experience Manager 中的新功能、修正及更新。Adobe 建議使用內部部署的客戶部署最新修補程式，以確保擁有更出色的穩定性、安全性及效能。
 
-+++詳細資訊
++++詳細資料
 
 ### [!DNL Experience Manager] 藍圖和發行版本影片
 
@@ -412,13 +412,13 @@ _已知問題_
 
 | 發佈日期 | 應用程式 | 名稱 | 類型 | 說明 |
 | ----------| ---------- | ---------- | ---------- |---------- |
-| 2023 年 8 月 | [!DNL AEM] | [Cloud Service 中的安全策略](https://experienceleague.adobe.com/docs/experience-manager-learn/assets/authoring/navigation.html?lang=zh-Hant) | 影片 | 了解如何確保您的數位體驗安全且獲得保護。 |
-| 2023 年 8 月 | [!DNL AEM Assets] | [基本 AEM Assets 導覽](https://experienceleague.adobe.com/docs/experience-manager-learn/assets/authoring/navigation.html?lang=zh-Hant) | 更新的影片 | 探索導覽 [!DNL AEM Assets] 的基本概念。 |
-| 2023 年 8 月 | [!DNL AEM Cloud Manager] | [[!DNL AEM Cloud Manager] Champion 營業時間](https://experienceleague.adobe.com/docs/events/aem-champion-office-hours/2023/may.html?lang=zh-Hant) | 影片 | 從 AEM Champion 了解有關 [!DNL AEM Cloud Manager] 的最佳實務。 |
-| 2023 年 8 月 | [!DNL AEM Forms] | [將表單資料保留在 Azure 儲存體中](https://experienceleague.adobe.com/docs/experience-manager-learn/cloud-service/forms/prefill-azure-storage/introduction.html?lang=zh-Hant) | 文章 | 了解如何使用 Azure 儲存體來儲存和繼續填寫最適化表單，以保留表單資料。 |
-| 2023 年 8 月 | [!DNL AEM Forms] | [從 AEM Forms 使用 SendGrid 寄送電子郵件](https://experienceleague.adobe.com/docs/experience-manager-learn/forms/some-useful-integrations/send-grid.html?lang=zh-Hant) | 文章 | 了解如何從 AEM Forms 使用 [!DNL SendGrid] 寄送電子郵件。 |
-| 2023 年 8 月 | [!DNL AEM Sites] | [為開發人員提供 CSRF 保護](https://experienceleague.adobe.com/docs/experience-manager-learn/cloud-service/developing/advanced/csrf-protection.html?lang=zh-Hant) | 文章 | 了解如何為已驗證的用戶，將 AEM CSRF 權杖新增到對 AEM 的 POST、PUT 和 DELETE 請求。 |
-| 2023 年 8 月 | [!DNL AEM Sites] | [[!DNL AEM Sites] Champion 營業時間](https://experienceleague.adobe.com/docs/events/aem-champion-office-hours/2023/march.html?lang=zh-Hant) | 影片 | 從 AEM Champion 了解有關 [!DNL AEM Sites] 的最佳實務。 |
+| 2023 年 8 月 | [!DNL AEM] | [Cloud Service 中的安全策略](https://experienceleague.adobe.com/docs/experience-manager-learn/assets/authoring/navigation.html) | 影片 | 了解如何確保您的數位體驗安全且獲得保護。 |
+| 2023 年 8 月 | [!DNL AEM Assets] | [基本 AEM Assets 導覽](https://experienceleague.adobe.com/docs/experience-manager-learn/assets/authoring/navigation.html) | 更新的影片 | 探索導覽 [!DNL AEM Assets] 的基本概念。 |
+| 2023 年 8 月 | [!DNL AEM Cloud Manager] | [[!DNL AEM Cloud Manager] Champion 營業時間](https://experienceleague.adobe.com/docs/events/aem-champion-office-hours/2023/may.html) | 影片 | 從 AEM Champion 了解有關 [!DNL AEM Cloud Manager] 的最佳實務。 |
+| 2023 年 8 月 | [!DNL AEM Forms] | [將表單資料保留在 Azure 儲存體中](https://experienceleague.adobe.com/docs/experience-manager-learn/cloud-service/forms/prefill-azure-storage/introduction.html) | 文章 | 了解如何使用 Azure 儲存體來儲存和繼續填寫最適化表單，以保留表單資料。 |
+| 2023 年 8 月 | [!DNL AEM Forms] | [從 AEM Forms 使用 SendGrid 寄送電子郵件](https://experienceleague.adobe.com/docs/experience-manager-learn/forms/some-useful-integrations/send-grid.html) | 文章 | 了解如何從 AEM Forms 使用 [!DNL SendGrid] 寄送電子郵件。 |
+| 2023 年 8 月 | [!DNL AEM Sites] | [為開發人員提供 CSRF 保護](https://experienceleague.adobe.com/docs/experience-manager-learn/cloud-service/developing/advanced/csrf-protection.html) | 文章 | 了解如何為已驗證的用戶，將 AEM CSRF 權杖新增到對 AEM 的 POST、PUT 和 DELETE 請求。 |
+| 2023 年 8 月 | [!DNL AEM Sites] | [[!DNL AEM Sites] Champion 營業時間](https://experienceleague.adobe.com/docs/events/aem-champion-office-hours/2023/march.html) | 影片 | 從 AEM Champion 了解有關 [!DNL AEM Sites] 的最佳實務。 |
 
 {style="table-layout:auto"}
 
@@ -428,9 +428,9 @@ _已知問題_
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|--------|---------|---------|
-| 2023 年 7 月 | [資產上傳失敗，且批次內容出現錯誤訊息](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22476.html?lang=zh-Hant) | 新文章 | 了解將多個資產上傳到資料夾時引發錯誤之問題的解決方案。 |
-| 2023 年 7 月 | [AEM 安裝錯誤：*在搜尋路徑臨界值之前未找到任何樣式*](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22472.html?lang=zh-Hant) | 新文章 | 了解安裝 AEM 6.5.17 後出現「_在搜尋路徑臨界值之前未找到任何樣式_」錯誤的問題解決方案。 |
-| 2023 年 7 月 | [如何自訂 Sites 主控台上頁面發佈日期的顯示格式？](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22473.html?lang=zh-Hant) | 新文章 | 了解如何自訂發佈日期的日期/時間格式，以包括當天時間。 |
+| 2023 年 7 月 | [資產上傳失敗，且批次內容出現錯誤訊息](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22476.html) | 新文章 | 了解將多個資產上傳到資料夾時引發錯誤之問題的解決方案。 |
+| 2023 年 7 月 | [AEM 安裝錯誤：*在搜尋路徑臨界值之前未找到任何樣式*](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22472.html) | 新文章 | 了解安裝 AEM 6.5.17 後出現「_在搜尋路徑臨界值之前未找到任何樣式_」錯誤的問題解決方案。 |
+| 2023 年 7 月 | [如何自訂 Sites 主控台上頁面發佈日期的顯示格式？](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22473.html) | 新文章 | 了解如何自訂發佈日期的日期/時間格式，以包括當天時間。 |
 
 {style="table-layout:auto"}
 
@@ -454,14 +454,14 @@ Learn more about [[!DNL Experience Manager Guides]](https://business.adobe.com/p
 
 ### Additional resources
 
-* [[!DNL Experience Manager Guides]](https://experienceleague.adobe.com/docs/experience-manager-guides-learn/videos/overview.html?lang=zh-Hant) - tutorials on Experience League
-* [[!DNL Experience Manager Guides] Learn & Support](https://helpx.adobe.com/tw/support/xml-documentation-for-experience-manager.html) - product documentation -->
+* [[!DNL Experience Manager Guides]](https://experienceleague.adobe.com/docs/experience-manager-guides-learn/videos/overview.html) - tutorials on Experience League
+* [[!DNL Experience Manager Guides] Learn & Support](https://helpx.adobe.com/support/xml-documentation-for-experience-manager.html) - product documentation -->
 
 ## ![圖示](/assets/ec_appicon_24.png) [!DNL Adobe Commerce] {#commerce}
 
 在 Experience League 上存取 [!DNL Adobe Commerce] 的發行說明、新教學課程和知識庫文章。
 
-+++詳細資訊
++++詳細資料
 
 * 請參閱 [ [!DNL Adobe Commerce]  和  [!DNL Magento Open Source] 發行說明](https://experienceleague.adobe.com/docs/commerce-operations/release/notes/overview.html?lang=zh-Hant)以取得最新資訊。
 * 請參閱[產品可用性](https://experienceleague.adobe.com/docs/commerce-operations/release/product-availability.html?lang=zh-Hant)以存取個別的產品發行說明並確認可用性。
@@ -476,8 +476,8 @@ Learn more about [[!DNL Experience Manager Guides]](https://business.adobe.com/p
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
-| 2023 年 8 月 | [MySQL 複製緩慢的說明](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/backend-development/galera-db-slow-replication.html?lang=zh-Hant) | 影片 | 了解有關 Galera DB 複製和相關 MySQL 查詢緩慢的資訊。 |
-| 2023 年 8 月 | [MySQL 查詢快取](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/backend-development/mysql-query-cache.html?lang=zh-Hant) | 影片 | 了解 MySQL 查詢快取。 |
+| 2023 年 8 月 | [MySQL 複製緩慢的說明](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/backend-development/galera-db-slow-replication.html) | 影片 | 了解有關 Galera DB 複製和相關 MySQL 查詢緩慢的資訊。 |
+| 2023 年 8 月 | [MySQL 查詢快取](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/backend-development/mysql-query-cache.html) | 影片 | 了解 MySQL 查詢快取。 |
 
 {style="table-layout:auto"}
 
@@ -487,8 +487,8 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|--------|---------|---------|
-| 2023 年 7 月 | [品質修補工具 (QPT)](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/support-tools/patches/patches-available-in-qpt-tool-overview.html?lang=zh-Hant) | 新文章 | 關於如何套用 QPT 1.1.32、QPT 1.1.33 和 QPT 1.1.34 中可用之修補程式的新文章已發佈，而且可以在其各自區段中找到。 |
-| 2023 年 7 月 | Admin 顯示「[_檔案無法刪除。警告！取消連結：沒有此類檔案或目錄_](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/troubleshooting/miscellaneous/file-cannot-be-deleated-no-file-or-directory.html?lang=zh-Hant)」錯誤 | 新文章 | 了解用戶在看到「_錯誤時的問題解決方案。檔案無法刪除。警告！取消連結：進行 JavaScript/CSS 清除時，沒有此類檔案或發生目錄「_」錯誤。 |
+| 2023 年 7 月 | [品質修補工具 (QPT)](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/support-tools/patches/patches-available-in-qpt-tool-overview.html) | 新文章 | 關於如何套用 QPT 1.1.32、QPT 1.1.33 和 QPT 1.1.34 中可用之修補程式的新文章已發佈，而且可以在其各自區段中找到。 |
+| 2023 年 7 月 | Admin 顯示「[_檔案無法刪除。警告！取消連結：沒有此類檔案或目錄_](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/troubleshooting/miscellaneous/file-cannot-be-deleated-no-file-or-directory.html)」錯誤 | 新文章 | 了解用戶在看到「_錯誤時的問題解決方案。檔案無法刪除。警告！取消連結：進行 JavaScript/CSS 清除時，沒有此類檔案或發生目錄「_」錯誤。 |
 
 {style="table-layout:auto"}
 
@@ -498,7 +498,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 取得 [!DNL Adobe Target] 預先發行說明、目前發行說明和新教學課程的存取權。
 
-+++詳細資訊
++++詳細資料
 
 <!--
 ### [!DNL Target] support knowledge base{#kb-target}
@@ -513,7 +513,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 取得 [!DNL Adobe Campaign] 最新更新。在 Experience League 上尋找新教學課程、課程和知識庫支援文章。
 
-+++詳細資訊
++++詳細資料
 
 ### 最新 Campaign 產品版本
 
@@ -534,16 +534,16 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|----|----|-----------|
-| 2023 年 7 月 | [自動回覆從 ACC 平台接收的電子郵件](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22514.html?lang=zh-Hant) | 新文章 | 了解對該平台寄送之電子郵件實施自動回覆的解決方法。 |
-| 2023 年 7 月 | [OOTB 中因為倉儲逾時導致的資料同步問題](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22499.html?lang=zh-Hant) | 新文章 | 了解 OOTB `ffdaReplicateStagingData` 工作流程未同步資料的問題解決方案。 |
-| 2023 年 7 月 | [透過 Adobe Analytics 從 ACS 進行的資料擷取不一致](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22483.html?lang=zh-Hant) | 新文章 | 了解從 ACS 進行之資料擷取不一致的問題解決方案。 |
-| 2023 年 7 月 | [Adobe Campaign Classic 與 HIGH-2023 之間的相容性](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22496.html?lang=zh-Hant) | 新文章 | 了解有關 [!DNL Campaign Classic] v7.3 和 HIGH-2023 之間相容性的更多資訊。 |
-| 2023 年 7 月 | [電子郵件設計工具中未顯示影像](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22179.html?lang=zh-Hant) | 新文章 | 了解上傳到電子郵件/傳遞的影像未在電子郵件設計工具介面中顯示 (顯示損壞的影像圖示) 的問題解決方案。 |
-| 2023 年 7 月 | [在傳遞活動 DCE 模式下無法查看電子郵件](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22417.html?lang=zh-Hant) | 新文章 | 了解 DCE 模式捲軸使用戶無法在傳遞活動中查看完整電子郵件的問題解決方案。 |
-| 2023 年 7 月 | [將檔案上傳至  [!DNL Azure Blob]  儲存體 - CRL-290029 禁止](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22375.html?lang=zh-Hant) | 新文章 | 了解如何解決用戶嘗試將檔案傳輸活動 (「動作」-「檔案上傳」) 新增到 [!DNL Azure Blob] 時出現的錯誤。 |
-| 2023 年 7 月 | [工作流程警示未傳送給主管群組中的用戶](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22371.html?lang=zh-Hant) | 新文章 | 了解工作流警示未傳送給主管群組用戶之問題的解決方案。 |
-| 2023 年 7 月 | [影像未上傳到公用資源](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22395.html?lang=zh-Hant) | 新文章 | 了解如何解決嘗試在任何公用資源資料夾中上傳生產環境之影像時出現的錯誤。 |
-| 2023 年 7 月 | [工作流程使用戶端主控台當機](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22393.html?lang=zh-Hant) | 新文章 | 了解如何解決工作流程使用戶端主控台當機的問題。 |
+| 2023 年 7 月 | [自動回覆從 ACC 平台接收的電子郵件](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22514.html) | 新文章 | 了解對該平台寄送之電子郵件實施自動回覆的解決方法。 |
+| 2023 年 7 月 | [OOTB 中因為倉儲逾時導致的資料同步問題](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22499.html) | 新文章 | 了解 OOTB `ffdaReplicateStagingData` 工作流程未同步資料的問題解決方案。 |
+| 2023 年 7 月 | [透過 Adobe Analytics 從 ACS 進行的資料擷取不一致](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22483.html) | 新文章 | 了解從 ACS 進行之資料擷取不一致的問題解決方案。 |
+| 2023 年 7 月 | [Adobe Campaign Classic 與 HIGH-2023 之間的相容性](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22496.html) | 新文章 | 了解有關 [!DNL Campaign Classic] v7.3 和 HIGH-2023 之間相容性的更多資訊。 |
+| 2023 年 7 月 | [電子郵件設計工具中未顯示影像](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22179.html) | 新文章 | 了解上傳到電子郵件/傳遞的影像未在電子郵件設計工具介面中顯示 (顯示損壞的影像圖示) 的問題解決方案。 |
+| 2023 年 7 月 | [在傳遞活動 DCE 模式下無法查看電子郵件](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22417.html) | 新文章 | 了解 DCE 模式捲軸使用戶無法在傳遞活動中查看完整電子郵件的問題解決方案。 |
+| 2023 年 7 月 | [將檔案上傳至  [!DNL Azure Blob]  儲存體 - CRL-290029 禁止](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22375.html) | 新文章 | 了解如何解決用戶嘗試將檔案傳輸活動 (「動作」-「檔案上傳」) 新增到 [!DNL Azure Blob] 時出現的錯誤。 |
+| 2023 年 7 月 | [工作流程警示未傳送給主管群組中的用戶](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22371.html) | 新文章 | 了解工作流警示未傳送給主管群組用戶之問題的解決方案。 |
+| 2023 年 7 月 | [影像未上傳到公用資源](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22395.html) | 新文章 | 了解如何解決嘗試在任何公用資源資料夾中上傳生產環境之影像時出現的錯誤。 |
+| 2023 年 7 月 | [工作流程使用戶端主控台當機](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22393.html) | 新文章 | 了解如何解決工作流程使用戶端主控台當機的問題。 |
 
 {style="table-layout:auto"}
 
@@ -560,7 +560,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 了解關於 [!DNL Journey Optimizer] 的最新發行資訊。在 Experience League 上檢視最新的教學課程和知識庫支援文章。
 
-+++詳細資訊
++++詳細資料
 
 ### 最新 [!DNL Journey Optimizer] 產品版本
 
@@ -572,9 +572,9 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | ----------| ---------- | ---------- |---------- |
-| 2023 年 7 月 | [設定並傳送推播通知行銷活動](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/push-channel/create-a-push-campaign.html?lang=zh-Hant) | 影片 | 了解如何透過行銷活動來設定和傳送推播通知。 |
-| 2023 年 7 月 | [以輪廓和客群成員資格為基礎的個人化](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/personalize-content/profile-and-audience-membership-based-personalization.html?lang=zh-Hant) | 更新的影片 | 了解如何將以輪廓為基礎的個人化新增至訊息，以及如何使用客群成員資格作為個人化區塊的先決條件。 |
-| 2023 年 7 月 | [直接郵件管道](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/direct-mail-channel/direct-mail.html?lang=zh-Hant) | 影片 | 了解如何設定直接郵件管道，以及如何建立和預覽直接郵件行銷活動。 |
+| 2023 年 7 月 | [設定並傳送推播通知行銷活動](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/push-channel/create-a-push-campaign.html) | 影片 | 了解如何透過行銷活動來設定和傳送推播通知。 |
+| 2023 年 7 月 | [以輪廓和客群成員資格為基礎的個人化](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/personalize-content/profile-and-audience-membership-based-personalization.html) | 更新的影片 | 了解如何將以輪廓為基礎的個人化新增至訊息，以及如何使用客群成員資格作為個人化區塊的先決條件。 |
+| 2023 年 7 月 | [直接郵件管道](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/direct-mail-channel/direct-mail.html) | 影片 | 了解如何設定直接郵件管道，以及如何建立和預覽直接郵件行銷活動。 |
 
 {style="table-layout:auto"}
 
@@ -593,7 +593,7 @@ New articles and updates to existing articles for [!DNL Journey Optimizer].-->
 
 在 Experience League 上存取 [!DNL Journey Orchestration] 最新發行說明。
 
-+++詳細資訊
++++詳細資料
 
 ### 最新 [!DNL Journey Orchestration] 產品版本
 
@@ -615,7 +615,7 @@ New articles and updates to existing articles for [!DNL Journey Optimizer].-->
 
 了解 [!DNL Marketo Engage] 的最新發行說明和發行排程。
 
-+++詳細資訊
++++詳細資料
 
 ### Marketo Engage 核心更新
 
@@ -628,13 +628,13 @@ New articles and updates to existing articles for [!DNL Journey Optimizer].-->
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | ----------| ---------- | ---------- |---------- |
-| 2023 年 8 月 | [參與地圖概觀](https://experienceleague.adobe.com/docs/marketo-learn/tutorials/programs-and-campaigns/engagement-maps/engagement-map-overview.html?lang=zh-Hant) | 影片 | 了解如何使用[!UICONTROL 參與地圖]來建立可重複使用的行銷活動和提高速度。 |
-| 2023 年 8 月 | [參與地圖巢狀行銷活動](https://experienceleague.adobe.com/docs/marketo-learn/tutorials/programs-and-campaigns/engagement-maps/engagement-map-nested-campaign.html?lang=zh-Hant) | 影片 | 使用[!UICONTROL 參與地圖]破解互連且深度巢狀的行銷活動，以便更深入了解整個客戶旅程。 |
-| 2023 年 8 月 | [參與地圖錯誤偵測和解決方案](https://experienceleague.adobe.com/docs/marketo-learn/tutorials/programs-and-campaigns/engagement-maps/engagement-map-error-detection-and-resolution.html?lang=zh-Hant) | 影片 | 了解[!UICONTROL 參與地圖]如何協助快速疑難排解和修正行銷活動問題。 |
+| 2023 年 8 月 | [參與地圖概觀](https://experienceleague.adobe.com/docs/marketo-learn/tutorials/programs-and-campaigns/engagement-maps/engagement-map-overview.html) | 影片 | 了解如何使用[!UICONTROL 參與地圖]來建立可重複使用的行銷活動和提高速度。 |
+| 2023 年 8 月 | [參與地圖巢狀行銷活動](https://experienceleague.adobe.com/docs/marketo-learn/tutorials/programs-and-campaigns/engagement-maps/engagement-map-nested-campaign.html) | 影片 | 使用[!UICONTROL 參與地圖]破解互連且深度巢狀的行銷活動，以便更深入了解整個客戶旅程。 |
+| 2023 年 8 月 | [參與地圖錯誤偵測和解決方案](https://experienceleague.adobe.com/docs/marketo-learn/tutorials/programs-and-campaigns/engagement-maps/engagement-map-error-detection-and-resolution.html) | 影片 | 了解[!UICONTROL 參與地圖]如何協助快速疑難排解和修正行銷活動問題。 |
 
 {style="table-layout:auto"}
 
-如需最新的產品文件，請參閱 [Marketo 產品文件](https://experienceleague.adobe.com/docs/marketo/using/home.html?lang=zh-Hant)首頁
+如需最新的產品文件，請參閱 [Marketo 產品文件](https://experienceleague.adobe.com/docs/marketo/using/home.html)首頁
 
 +++
 
@@ -642,7 +642,7 @@ New articles and updates to existing articles for [!DNL Journey Optimizer].-->
 
 了解 [!DNL Adobe Workfront] 的最新發行說明。在 Experience League 上找到新教學課程。
 
-+++詳細資訊
++++詳細資料
 
 ### 新的 Adobe [!DNL Workfront] 課程與教學課程 {#tutorials-workfront}
 
@@ -652,7 +652,7 @@ New articles and updates to existing articles for [!DNL Journey Optimizer].-->
 | ----------| ---------- | ---------- |---------- |
 | 2023 年 8 月 | [適用於管理員的專案財務](https://experienceleague.adobe.com/docs/courses/using/workfront-a-1-2023-1-finances.html) | 課程 | 了解如何建立財務設定，以確保 [!DNL Workfront] 執行個體或群組中帳單和報告的一致性。 |
 | 2023 年 8 月 | [適用於用戶的專案財務](https://experienceleague.adobe.com/docs/courses/using/workfront-u-1-2023-1-finances.html) | 課程 | 了解如何追蹤專案的財務資訊、設定成本和收入類型，以及覆寫計費費率。 |
-| 2023 年 8 月 | [了解流量請求的設定](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/manage-work/request-queues/understand-settings-for-a-flow-request.html?lang=zh-Hant) | 影片 | 了解 [!DNL Workfront] 中請求流程的運作方式。然後建立路由規則、主題群組和佇列主題。 |
+| 2023 年 8 月 | [了解流量請求的設定](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/manage-work/request-queues/understand-settings-for-a-flow-request.html) | 影片 | 了解 [!DNL Workfront] 中請求流程的運作方式。然後建立路由規則、主題群組和佇列主題。 |
 | 2023 年 8 月 | [了解跨專案前置任務](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/manage-work/intermediate-projects/understand-cross-project-predecessors.html?lang=zh-Hant) | 影片 | 了解如何在兩個或更多專案中使用和追蹤前置任務。 |
 | 2023 年 8 月 | [了解專案時間表](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/manage-work/project-timelines/understand-project-timelines.html?lang=zh-Hant) | 影片 | 了解如何從開始或完成日期為專案進行排程，然後了解持續時間、前置任務和任務限制如何影響專案計劃。 |
 | 2023 年 8 月 | [共用專案](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/manage-work/projects/share-a-project.html?lang=zh-Hant) | 影片 | 了解如何共用專案，以便利害關係人和對專案感興趣的其他人可以使用 [!DNL Workfront] 查看完成的工作。 |
@@ -665,7 +665,7 @@ New articles and updates to existing articles for [!DNL Journey Optimizer].-->
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
-| 2023 年 7 月 | [上傳校訂時發生校訂問題，藍色長條無限期捲動](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22364.html?lang=zh-Hant) | 新文章 | 了解如何解決上傳新校訂時出現的錯誤。 |
+| 2023 年 7 月 | [上傳校訂時發生校訂問題，藍色長條無限期捲動](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22364.html) | 新文章 | 了解如何解決上傳新校訂時出現的錯誤。 |
 
 {style="table-layout:auto"}
 
@@ -677,7 +677,7 @@ New articles and updates to existing articles for [!DNL Journey Optimizer].-->
 
 [!DNL Adobe Advertising] 發行說明。
 
-+++詳細資訊
++++詳細資料
 
 <!--
 ### New features across [!DNL Advertising] {#advertising-all}
@@ -710,15 +710,15 @@ Last updated: **August 9, 2022**
 >
 >**品牌更新：**_Adobe Document Services_&#x200B;現在是 _Adobe Acrobat Services_。請在[這裡](https://blog.developer.adobe.com/adobe-document-services-is-now-adobe-acrobat-services-f8e3e506b7b1)了解相關內容。
 
-+++詳細資訊
++++詳細資料
 
 | 發佈日期 | 應用程式 | 名稱 | 類型 | 說明 |
 | ----------| ---------- | ---------- | ---------- |---------- |
-| 2023 年 8 月 | Acrobat Sign | [使用案例：教育 IEP 流程的自訂工作流程](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/expand/recipes/edu/usecase-edu-iep.html?lang=zh-Hant) | 影片 | 了解如何使用自訂工作流程設計工具，為 K-12 學校將個別化教育計劃 (IEP) 流程數位化。 |
-| 2023 年 8 月 | Acrobat Sign | [使用案例：教育網頁表單實習申請](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/expand/recipes/edu/usecase-edu-intern.html?lang=zh-Hant) | 影片 | 了解如何使用網頁表單，改善學生存取從任何裝置和任何位置提交必要表單的權限，進而加快教育核准流程。 |
-| 2023 年 8 月 | Acrobat Sign | [使用案例：建立教育網頁表單實習申請](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/expand/recipes/edu/usecase-edu-intern-create.html?lang=zh-Hant) | 影片 | 了解如何建立實習網頁表單，以改善學生存取從任何裝置和任何位置提交必要表單的權限。 |
-| 2023 年 8 月 | Acrobat Sign | [將網路表單與 SharePoint Online 整合](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/integrations/microsoft/integrate-web-form-sharepoint-online.html?lang=zh-Hant) | 影片 | 了解如何將從網頁表單收集的資料對應到 SharePoint 清單，進而允許您跨團隊共用收集的資料。 |
-| 2023 年 8 月 | Acrobat Sign | [使用案例：有多個未知簽署者的政府貸款申請](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/expand/recipes/gov/webform-multiple-signers.html?lang=zh-Hant) | 影片 | 了解如何將網頁表單用於複雜的政府貸款申請工作流程，其中有許多名未知的參與者。 |
+| 2023 年 8 月 | Acrobat Sign | [使用案例：教育 IEP 流程的自訂工作流程](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/expand/recipes/edu/usecase-edu-iep.html) | 影片 | 了解如何使用自訂工作流程設計工具，為 K-12 學校將個別化教育計劃 (IEP) 流程數位化。 |
+| 2023 年 8 月 | Acrobat Sign | [使用案例：教育網頁表單實習申請](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/expand/recipes/edu/usecase-edu-intern.html) | 影片 | 了解如何使用網頁表單，改善學生存取從任何裝置和任何位置提交必要表單的權限，進而加快教育核准流程。 |
+| 2023 年 8 月 | Acrobat Sign | [使用案例：建立教育網頁表單實習申請](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/expand/recipes/edu/usecase-edu-intern-create.html) | 影片 | 了解如何建立實習網頁表單，以改善學生存取從任何裝置和任何位置提交必要表單的權限。 |
+| 2023 年 8 月 | Acrobat Sign | [將網路表單與 SharePoint Online 整合](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/integrations/microsoft/integrate-web-form-sharepoint-online.html) | 影片 | 了解如何將從網頁表單收集的資料對應到 SharePoint 清單，進而允許您跨團隊共用收集的資料。 |
+| 2023 年 8 月 | Acrobat Sign | [使用案例：有多個未知簽署者的政府貸款申請](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/expand/recipes/gov/webform-multiple-signers.html) | 影片 | 了解如何將網頁表單用於複雜的政府貸款申請工作流程，其中有許多名未知的參與者。 |
 
 {style="table-layout:auto"}
 
@@ -734,13 +734,13 @@ Last updated: **August 9, 2022**
 
 針對適用於企業的 [!DNL Creative Cloud] 發佈的新影片、教學課程或其他課程。
 
-+++詳細資訊
++++詳細資料
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | ----------| ---------- | ---------- |---------- |
-| 2023 年 8 月 | [使用 Firefly 為部落格建立圖形內容](https://experienceleague.adobe.com/docs/creative-cloud-enterprise-learn/cce-learning-hub/expressoverview/expresstutorials/create-blog-graphics.html?lang=zh-Hant) | 影片 | 了解如何在 Adobe Express 中使用由 Adobe Firefly 提供技術支援的「文字轉影像」，為部落格建立獨特的圖形內容。 |
-| 2023 年 8 月 | [使用 Firefly 建立招聘和入職內容](https://experienceleague.adobe.com/docs/creative-cloud-enterprise-learn/cce-learning-hub/expressoverview/expresstutorials/create-on-boarding.html?lang=zh-Hant) | 影片 | 了解如何在 Adobe Express 中使用由 Adobe Firefly 提供技術支援的「文字轉影像」，為員工招聘和入職內容建立獨特的圖形。 |
-| 2023 年 8 月 | [使用 Firefly 為行銷活動建立傳單內容](https://experienceleague.adobe.com/docs/creative-cloud-enterprise-learn/cce-learning-hub/expressoverview/expresstutorials/create-local-marketing.html?lang=zh-Hant) | 影片 | 了解如何在 Adobe Express 中使用由 Adobe Firefly 提供技術支援的「文字轉影像」，從全球飯店行銷活動中建立本地化內容。 |
+| 2023 年 8 月 | [使用 Firefly 為部落格建立圖形內容](https://experienceleague.adobe.com/docs/creative-cloud-enterprise-learn/cce-learning-hub/expressoverview/expresstutorials/create-blog-graphics.html) | 影片 | 了解如何在 Adobe Express 中使用由 Adobe Firefly 提供技術支援的「文字轉影像」，為部落格建立獨特的圖形內容。 |
+| 2023 年 8 月 | [使用 Firefly 建立招聘和入職內容](https://experienceleague.adobe.com/docs/creative-cloud-enterprise-learn/cce-learning-hub/expressoverview/expresstutorials/create-on-boarding.html) | 影片 | 了解如何在 Adobe Express 中使用由 Adobe Firefly 提供技術支援的「文字轉影像」，為員工招聘和入職內容建立獨特的圖形。 |
+| 2023 年 8 月 | [使用 Firefly 為行銷活動建立傳單內容](https://experienceleague.adobe.com/docs/creative-cloud-enterprise-learn/cce-learning-hub/expressoverview/expresstutorials/create-local-marketing.html) | 影片 | 了解如何在 Adobe Express 中使用由 Adobe Firefly 提供技術支援的「文字轉影像」，從全球飯店行銷活動中建立本地化內容。 |
 
 {style="table-layout:auto"}
 
