--- a/c-legacy-releases/2023/09132023.md
+++ b/c-legacy-releases/2023/09132023.md
@@ -1,15 +1,15 @@
 ---
-title: 發行說明 - 2023 年 9 月
+title: Central發行說明 — 2023年9月
 description: 閱讀 Adobe  [!DNL Experience Cloud]  產品和服務的最新發行說明。了解有關 Experience League 即將舉辦的活動和新文件。探索  [!DNL Experience Cloud]  應用程式的最新教學課程和其他課程。
 doc-type: release notes
 last-update: August 2023
 author: mfrei
 mini-toc-levels: 2
 exl-id: f56478de-79d0-4bfe-9468-e6f6619dd814
-source-git-commit: 36e91cd8e7e394651718c44969a077f58beee4c6
+source-git-commit: 6fb2d115be0b2d8dacd5b24218b0c647fad782b2
 workflow-type: tm+mt
-source-wordcount: '5767'
-ht-degree: 100%
+source-wordcount: '5768'
+ht-degree: 99%
 
 ---
 
@@ -25,7 +25,7 @@ ht-degree: 100%
 
 **需要協助嗎?**
 
-登入 [Experience League](https://experienceleague.adobe.com/zh-hant#home)，在 Adobe 自助資源庫中自訂您的搜尋體驗。 瀏覽所有級別和角色的[產品文件](https://experienceleague.adobe.com/docs/?lang=zh-Hant)、[教學課程影片](https://experienceleague.adobe.com/docs/home-tutorials.html?lang=zh-Hant)、[課程](https://experienceleague.adobe.com/zh-hant#courses)和[活動](https://experienceleague.adobe.com/events/?lang=zh-Hant)。向您的同業[社群](https://experienceleaguecommunities.adobe.com/?profile.language=en)提問，並在您最需要時獲得專家[支援](https://experienceleague.adobe.com/zh-hant?support-tab=home#support)。
+登入 [Experience League](https://experienceleague.adobe.com/#home)，在 Adobe 自助資源庫中自訂您的搜尋體驗。 瀏覽所有級別和角色的[產品文件](https://experienceleague.adobe.com/docs/)、[教學課程影片](https://experienceleague.adobe.com/docs/home-tutorials.html?lang=zh-Hant)、[課程](https://experienceleague.adobe.com/#courses)和[活動](https://experienceleague.adobe.com/events/)。向您的同業[社群](https://experienceleaguecommunities.adobe.com/?profile.language=en)提問，並在您最需要時獲得專家[支援](https://experienceleague.adobe.com/?support-tab=home#support)。
 
 ## 產品發行更新和活動
 
@@ -73,7 +73,7 @@ ht-degree: 100%
 
 +++即將推出的 Experience League 活動
 
-請查看 [Experience League 活動](https://experienceleague.adobe.com/events/?lang=zh-Hant)取得即將到來的活動和隨選即播的過去活動的完整時間表。
+請查看 [Experience League 活動](https://experienceleague.adobe.com/events/)取得即將到來的活動和隨選即播的過去活動的完整時間表。
 
 +++
 
@@ -81,7 +81,7 @@ ht-degree: 100%
 
 請注意，所有 Adobe 認證候選者！造訪 Experience League 上的 Experience Cloud [認證](https://experienceleague.adobe.com/docs/certification/program/overview.html?lang=zh-Hant)網站。
 
-+++詳細資訊
++++詳細資料
 
 認證網站是所有 [!DNL Experience Cloud] 認證相關內容的一站式商店，且會定期更新：
 
@@ -97,9 +97,9 @@ ht-degree: 100%
 
 了解 [!DNL Adobe System Status] 的最新功能和更新。
 
-+++詳細資訊
++++詳細資料
 
-[!DNL Adobe System Status] 提供有關 Adobe 產品的詳細資訊、狀態更新和電子郵件通知。收到有關服務中斷、作業中斷和維護事件的通知。請前往 [status.adobe.com](https://status.adobe.com/) 了解詳情。
+[!DNL Adobe System Status] 提供有關 Adobe 產品和服務的詳細資訊、狀態更新和電子郵件通知。收到有關服務中斷、作業中斷和維護事件的通知。請前往 [status.adobe.com](https://status.adobe.com/) 了解詳情。
 
 有關最近的功能更新，請參閱：
 
@@ -113,9 +113,9 @@ ht-degree: 100%
 
 了解有關 [!DNL Experience Cloud] 介面。管理產品和使用者、配置輪廓的設定和偏好設定、搜尋 Experience Cloud 物件以及管理 Cookie。
 
-+++詳細資訊
++++詳細資料
 
-有關 Experience Cloud 統一介面元件的說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/docs/core-services/interface/experience-cloud.html?lang=zh-Hant) (包含[!UICONTROL 客戶屬性]、[!DNL Experience Cloud Assets]和[!UICONTROL 客群])。
+如需有關 Experience Cloud 統一介面元件的說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/docs/core-services/interface/experience-cloud.html?lang=zh-Hant) (包含[!UICONTROL 客戶屬性]、[!DNL Experience Cloud Assets]和[!UICONTROL 客群])。
 
 +++
 
@@ -123,7 +123,7 @@ ht-degree: 100%
 
 尋找 [!DNL Experience Platform] 和 [!UICONTROL Mobile SDK] 的最新發行資訊和新文件。檢視 Experience League 上的新教學課程和知識庫。
 
-+++詳細資訊
++++詳細資料
 
 * [[!DNL Experience Platform] 發行說明](https://experienceleague.adobe.com/docs/experience-platform/release-notes/latest.html?lang=zh-Hant)
 
@@ -146,7 +146,7 @@ ht-degree: 100%
 
 在 Experience League 上尋找 [!DNL Real-Time Customer Data Platform] 的最新教學課程。
 
-+++詳細資訊
++++詳細資料
 
 針對 Adobe [!DNL Real-Time Customer Data Platform] 發佈的新影片、教學課程或課程。
 
@@ -159,13 +159,13 @@ ht-degree: 100%
 
 {style="table-layout:auto"}
 
-+++
++++ 
 
 ## ![圖示](/assets/analytics.png) [!DNL Analytics] {#analytics}
 
 如需 [!DNL Adobe Analytics] 和 [!DNL AppMeasurement] 的最新發行資訊查看 Experience League 上的最新教學課程與其他課程。
 
-+++詳細資訊
++++詳細資料
 
 [!DNL Analytics] 發行日期：**2023 年 9 月 13 日**
 
@@ -200,7 +200,7 @@ New articles and updates to existing articles for [!DNL Analytics].
 
 如需 [!DNL Customer Journey Analytics] 的最新發行資訊。查看 Experience League 上的最新教學課程與其他課程。
 
-+++詳細資訊
++++詳細資料
 
 [!DNL Customer Journey Analytics] 發行日期：**2023 年 9 月 13 日**
 
@@ -234,7 +234,7 @@ New articles and updates to existing articles for [!DNL Analytics].
 
 [!DNL Audience Manager]的更新和新內容。
 
-+++詳細資訊
++++詳細資料
 
 從 2023 年 7 月開始，Adobe 已停止開發 [!DNL Data Integration Library (DIL)] 和 [!DNL DIL] 擴充功能。
 現有客戶可以繼續使用他們實施的 [!DNL DIL]。然而，Adobe 從該時間點起不會再開發 [!DNL DIL]。建立客戶針對其長期資料收集策略來評估 [Experience Platform Web SDK](https://experienceleague.adobe.com/docs/experience-platform/edge/home.html?lang=zh-Hant)。若客戶希望在 2023 年 7 月後實施新資料收集整合，他們應該使用 [Experience Platform Web SDK](https://experienceleague.adobe.com/docs/experience-platform/edge/home.html?lang=zh-Hant)。
@@ -248,17 +248,17 @@ New articles and updates to existing articles for [!DNL Audience Manager].
 
 | Published | Name | Type | Description |
 | -----------| ---------- | ---------- | ---------- |
-| August 2023 | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) |Video | Description |
-| August 2023 | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) |Video | Description |
-| August 2023 | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) |Video | Description |
-| August 2023 | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) |Video | Description |
-| August 2023 | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) |Video | Description |
-| August 2023 | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) |Video | Description |
-| August 2023 | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) |Video | Description |
+| August 2023 | [linktext](https://experienceleague.adobe.com/?lang=en#home) |Video | Description |
+| August 2023 | [linktext](https://experienceleague.adobe.com/?lang=en#home) |Video | Description |
+| August 2023 | [linktext](https://experienceleague.adobe.com/?lang=en#home) |Video | Description |
+| August 2023 | [linktext](https://experienceleague.adobe.com/?lang=en#home) |Video | Description |
+| August 2023 | [linktext](https://experienceleague.adobe.com/?lang=en#home) |Video | Description |
+| August 2023 | [linktext](https://experienceleague.adobe.com/?lang=en#home) |Video | Description |
+| August 2023 | [linktext](https://experienceleague.adobe.com/?lang=en#home) |Video | Description |
 
 {style="table-layout:auto"}
 
-For self-help resources, see [Audience Manager documentation and tutorials](https://experienceleague.adobe.com/docs/audience-manager.html?lang=zh-Hant) on Experience League.
+For self-help resources, see [Audience Manager documentation and tutorials](https://experienceleague.adobe.com/docs/audience-manager.html) on Experience League.
 
  -->
 
@@ -266,7 +266,7 @@ For self-help resources, see [Audience Manager documentation and tutorials](http
 
 Experience Manager 中的新功能、修正及更新。Adobe 建議使用內部部署的客戶部署最新修補程式，以確保擁有更出色的穩定性、安全性及效能。
 
-+++詳細資訊
++++詳細資料
 
 ### [!DNL Experience Manager] 藍圖和發行版本影片
 
@@ -505,14 +505,14 @@ Learn more about [[!DNL Experience Manager Guides]](https://business.adobe.com/p
 
 ### Additional resources
 
-* [[!DNL Experience Manager Guides]](https://experienceleague.adobe.com/docs/experience-manager-guides-learn/videos/overview.html?lang=zh-Hant) - tutorials on Experience League
-* [[!DNL Experience Manager Guides] Learn & Support](https://helpx.adobe.com/tw/support/xml-documentation-for-experience-manager.html) - product documentation -->
+* [[!DNL Experience Manager Guides]](https://experienceleague.adobe.com/docs/experience-manager-guides-learn/videos/overview.html) - tutorials on Experience League
+* [[!DNL Experience Manager Guides] Learn & Support](https://helpx.adobe.com/support/xml-documentation-for-experience-manager.html) - product documentation -->
 
 ## ![圖示](/assets/ec_appicon_24.png) [!DNL Adobe Commerce] {#commerce}
 
 在 Experience League 上存取 [!DNL Adobe Commerce] 的發行說明、新教學課程和知識庫文章。
 
-+++詳細資訊
++++詳細資料
 
 * 請參閱 [ [!DNL Adobe Commerce]  和  [!DNL Magento Open Source] 發行說明](https://experienceleague.adobe.com/docs/commerce-operations/release/notes/overview.html?lang=zh-Hant)以取得最新資訊。
 * 請參閱[產品可用性](https://experienceleague.adobe.com/docs/commerce-operations/release/product-availability.html?lang=zh-Hant)以存取個別的產品發行說明並確認可用性。
@@ -558,7 +558,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 取得 [!DNL Adobe Target] 預先發行說明、目前發行說明和新教學課程的存取權。
 
-+++詳細資訊
++++詳細資料
 
 <!--
 ### [!DNL Target] support knowledge base{#kb-target}
@@ -573,7 +573,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 取得 [!DNL Adobe Campaign] 最新更新。在 Experience League 上尋找新教學課程、課程和知識庫支援文章。
 
-+++詳細資訊
++++詳細資料
 
 ### 最新 Campaign 產品版本
 
@@ -616,7 +616,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 了解關於 [!DNL Journey Optimizer] 的最新發行資訊。在 Experience League 上檢視最新的教學課程和知識庫支援文章。
 
-+++詳細資訊
++++詳細資料
 
 ### 最新 [!DNL Journey Optimizer] 產品版本
 
@@ -651,7 +651,7 @@ New articles and updates to existing articles for [!DNL Journey Optimizer].-->
 
 在 Experience League 上存取 [!DNL Journey Orchestration] 最新發行說明。
 
-+++詳細資訊
++++詳細資料
 
 ### 最新 [!DNL Journey Orchestration] 產品版本
 
@@ -673,7 +673,7 @@ New articles and updates to existing articles for [!DNL Journey Optimizer].-->
 
 了解 [!DNL Marketo Engage] 的最新發行說明和發行排程。
 
-+++詳細資訊
++++詳細資料
 
 ### Marketo Engage 核心更新
 
@@ -698,7 +698,7 @@ New articles and updates to existing articles for [!DNL Journey Optimizer].-->
 
 了解 [!DNL Adobe Workfront] 的最新發行說明。在 Experience League 上找到新教學課程。
 
-+++詳細資訊
++++詳細資料
 
 ### 新的 Adobe [!DNL Workfront] 課程與教學課程 {#tutorials-workfront}
 
@@ -728,7 +728,7 @@ New articles and updates to existing articles for [!DNL Journey Optimizer].-->
 
 [!DNL Adobe Advertising] 發行說明。
 
-+++詳細資訊
++++詳細資料
 
 <!--
 ### New features across [!DNL Advertising] {#advertising-all}
@@ -771,7 +771,7 @@ Last updated: **August 9, 2022**
 >
 >**品牌更新：**_Adobe Document Services_&#x200B;現在是 _Adobe Acrobat Services_。請在[這裡](https://blog.developer.adobe.com/adobe-document-services-is-now-adobe-acrobat-services-f8e3e506b7b1)了解相關內容。
 
-+++詳細資訊
++++詳細資料
 
 | 發佈日期 | 應用程式 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |---------- |
@@ -793,7 +793,7 @@ Last updated: **August 9, 2022**
 
 針對 [!DNL Creative Cloud for enterprise] 發佈的新影片、教學課程或其他課程。
 
-+++詳細資訊
++++詳細資料
 
 如需了解最新教學課程，請參閱[適用於企業的 Creative Cloud 教學課程](https://experienceleague.adobe.com/docs/creative-cloud-enterprise-learn/cce-learning-hub/overview.html?lang=zh-Hant)。
 
