--- a/c-legacy-releases/2025/01222025.md
+++ b/c-legacy-releases/2025/01222025.md
@@ -1,14 +1,14 @@
 ---
-title: 發行說明 - 2025 年 1 月
+title: Central發行說明 — 2025年1月
 description: 尋找 Adobe  [!DNL Experience Cloud]  產品和服務的最新發行說明和知識庫問題。了解 Experience League 即將舉辦的活動和新文件。探索  [!DNL Experience Cloud]  應用程式的最新教學課程和其他課程。
 doc-type: release notes
 last-update: January 2025
 author: mfrei
 mini-toc-levels: 2
 exl-id: 2a47d042-6a1c-4896-8935-038f7fda703e
-source-git-commit: 175883b8c43e020c555b9c90f3ea9126b34ef222
+source-git-commit: 6fb2d115be0b2d8dacd5b24218b0c647fad782b2
 workflow-type: tm+mt
-source-wordcount: '4097'
+source-wordcount: '4098'
 ht-degree: 99%
 
 ---
@@ -19,13 +19,13 @@ ht-degree: 99%
 
 <!-- ![Banner](assets/release-notes-header.png) -->
 
-[Experience League](https://experienceleague.adobe.com/zh-hant#home) 可幫助您了解 Experience Cloud 及 Adobe 企業應用程式。為了獲得最佳體驗，請登入並在我們的免費資源庫中自訂搜尋，其中包括：
+[Experience League](https://experienceleague.adobe.com/#home) 可幫助您了解 Experience Cloud 及 Adobe 企業應用程式。為了獲得最佳體驗，請登入並在我們的免費資源庫中自訂搜尋，其中包括：
 
 * [產品文件](https://experienceleague.adobe.com/zh-hant/docs)
 * [影片播放清單](https://experienceleague.adobe.com/zh-hant/playlists)
-* [活動](https://experienceleague.adobe.com/events/?lang=zh-Hant)
+* [活動](https://experienceleague.adobe.com/events/)
 * [社群論壇](https://experienceleaguecommunities.adobe.com/?profile.language=en)
-* [支援](https://experienceleague.adobe.com/zh-hant?support-tab=home#support)
+* [支援](https://experienceleague.adobe.com/?support-tab=home#support)
 
 **持續通知：**&#x200B;若要收到關於此頁面更新的每月電子郵件通知，請訂閱 [Adobe 優先產品更新](https://www.adobe.com/tw/subscription/priority-product-update.html)。
 
@@ -77,7 +77,7 @@ ht-degree: 99%
 
 發行日期：**2025 年 2 月 5 日**
 
-全新的 [Experience League 首頁](https://experienceleague.adobe.com/zh-hant?lang=en) 上會提供由 [!DNL Adobe Target] 所支援的個人化學習推薦內容。
+全新的 [Experience League 首頁](https://experienceleague.adobe.com/?lang=en) 上會提供由 [!DNL Adobe Target] 所支援的個人化學習推薦內容。
 
 主要功能：
 
@@ -95,7 +95,7 @@ ht-degree: 99%
 
 * **[!DNL Adobe Summit]** | _數位體驗大會_ | 與同行一起聆聽可口可樂公司、JPMorganChase、ServiceNow 等公司高階主管的演說。| **3 月 18 日至 19 日，於拉斯維加斯和線上舉行** | [報名](https://summit.adobe.com/na/?promoid=G4FRYKWG&mv=other)
 
-檢視所有[即將舉行的活動](https://experienceleague.adobe.com/events/?lang=zh-Hant)或瀏覽關於 Experience League 的[過往活動錄影](https://experienceleague.adobe.com/zh-hant/docs/events/experience-league-recorded-events/overview)。
+檢視所有[即將舉行的活動](https://experienceleague.adobe.com/events/)或瀏覽關於 Experience League 的[過往活動錄影](https://experienceleague.adobe.com/zh-hant/docs/events/experience-league-recorded-events/overview)。
 
 +++
 
@@ -245,7 +245,7 @@ New tutorials published for [!DNL Customer Journey Analytics].
 
 |Published|Name|Type|Description |
 | -----------| ---------- | ---------- | ---------- |
-|October 2024|[Create summary-level data sources in Customer Journey Analytics](https://experienceleague.adobe.com/zh-hant/docs/customer-journey-analytics-learn/tutorials/data-views/create-summary-level-data-sources)|Video |Learn how [!DNL Customer Journey Analytics] supports summary-level data that enables you to aggregate and analyze data that isn't organized by individual IDs, such as campaign or product data.| -->
+|October 2024|[Create summary-level data sources in Customer Journey Analytics](https://experienceleague.adobe.com/en/docs/customer-journey-analytics-learn/tutorials/data-views/create-summary-level-data-sources)|Video |Learn how [!DNL Customer Journey Analytics] supports summary-level data that enables you to aggregate and analyze data that isn't organized by individual IDs, such as campaign or product data.| -->
 
 +++
 
@@ -309,9 +309,9 @@ New tutorials published for [!DNL Customer Journey Analytics].
 | 2024 年 11 月 | [[!DNL AEM Content Fragment] 模型欄位](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25300) | 新文章 | 了解 [!DNL Adobe Experience Manager (AEM) Content Fragment (CF)] 模型中欄位數量的限制和設定。 |
 | 2024 年 11 月 | [參數 `includeChildren` 在[!UICONTROL 發佈內容樹狀工作流程] (預覽代理程式) 中無法正常運作](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25257) | 新文章 | 了解如何解決客戶創建的工作流程，該工作流程用於將內容片段 ([!DNL CFs]) 發佈到預覽伺服器時，儘管包含了 `includeChildren` 選項，卻停止複製嵌套片段和未發佈的資產的問題。 |
 | 2024 年 11 月 | [在  [!DNL AEM 6.5.18]  中，由於 *[!DNL NullPointerException]*，版本清除失敗。](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25299) | 新文章 | 了解如何解決在 [!DNL Adobe Experience Manager (AEM) version 6.5.18] 中發生的已知問題，該問題導致版本清除任務失敗，並出現 `java.lang.NullPointerException`。 |
-| 2024 年 11 月 | [防止在  [!DNL AEM]  指南中意外刪除參考的主題/檔案。](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25255) | 新文章 | 了解如何解決當您在 [!DNL Adobe Experience Manager (AEM)] 中刪除在 `maps/rootmaps` 中參考的指南主題/檔案時，未顯示 [!UICONTROL &#x200B; 強制刪除 &#x200B;] 選項以確認刪除的問題。 |
+| 2024 年 11 月 | [防止在  [!DNL AEM]  指南中意外刪除參考的主題/檔案。](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25255) | 新文章 | 了解如何解決當您在 [!DNL Adobe Experience Manager (AEM)] 中刪除在 `maps/rootmaps` 中參考的指南主題/檔案時，未顯示 [!UICONTROL  強制刪除 ] 選項以確認刪除的問題。 |
 | 2024 年 11 月 | [如何區分  [!DNL AEM]  指南審核工具中的條件式文字和草稿留言。](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25309) | 新文章 | 了解如何在 [!DNL AEM Guides Review Tool] 中區分條件式文字和草稿留言。 |
-| 2024 年 11 月 |  [!DNL Brand Portal] 中的  [!DNL DMS7]  資產 [*[!DNL Fail to load data]*&#x200B;錯誤](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25296) | 新文章 | 了解如何解決在開啟包含 [!DNL DMS7] 資產的資料夾時，在 [!DNL Brand Portal] 中出現的 `Fail to load data` 錯誤。 |
+| 2024 年 11 月 |  [!DNL Brand Portal] 中的  [!DNL DMS7]  資產 [*[!DNL Fail to load data]*錯誤](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25296) | 新文章 | 了解如何解決在開啟包含 [!DNL DMS7] 資產的資料夾時，在 [!DNL Brand Portal] 中出現的 `Fail to load data` 錯誤。 |
 | 2024 年 11 月 | [疑難排解  [!DNL AEM as a Cloud Service] 中的  [!DNL HTTP 5XX]  錯誤](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25099) | 新文章 | 了解如何解決當 [!DNL HTTP 5XX] 錯誤發生在[!UICONTROL 發佈]層時，通常顯示為 `Service Unavailable` 訊息的問題。 |
 | 2024 年 11 月 | [疑難排解  [!DNL AEM as a Cloud Service] 中的  [!DNL HTTP 429]  錯誤回應](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25100) | 新文章 | 了解如何解決當 [!DNL AEMaaCS] 接收到來自過多請求的 [!DNL HTTP 429] 錯誤，並導致效能問題的問題。 |
 | 2024 年 12 月 | [Dynamic Media 同步使用者建議](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25471) | 新文章 | 了解有關 [!DNL AEM] 與 [!DNL Dynamic Media] 同步的建議。 |
@@ -367,7 +367,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 ## [!DNL Target] {#target}
 
-取得 [!DNL Adobe Target] 的發行前說明、最新發行說明和新教學課程的存取權。
+取得 [!DNL Adobe Target] 的預發行說明、最新發行說明和新教學課程的存取權。
 
 +++詳細資料
 
@@ -375,7 +375,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 |Published|Name|Type|Description|
 |---------|----|----|-----------|
-|July 2024|[[!DNL Adobe Target] bulk profile update [!DNL API] throws *[!DNL Unexpected Error]* when using [!DNL Postman]](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-24281)|New article| Learn about how to fix the issue when running the [!DNL Target Bulk Profile Update API] throws the *[!DNL Unexpected Error]* message in [!DNL Postman].|
+|July 2024|[[!DNL Adobe Target] bulk profile update [!DNL API] throws *[!DNL Unexpected Error]* when using [!DNL Postman]](https://experienceleague.adobe.com/en/docs/experience-cloud-kcs/kbarticles/ka-24281)|New article| Learn about how to fix the issue when running the [!DNL Target Bulk Profile Update API] throws the *[!DNL Unexpected Error]* message in [!DNL Postman].|
 -->
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
@@ -455,7 +455,7 @@ New tutorials published for Adobe [!DNL Journey Optimizer] on Experience League.
 
 |Published|Name|Type|Description |
 | -----------| ---------- | ---------- | ---------- |
-|October 2024|[Configure business rules - Frequency capping](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer-learn/tutorials/configuration/business-rules/configure-frequency-capping-rules)|Video |Learn how to configure frequency capping rules.| -->
+|October 2024|[Configure business rules - Frequency capping](https://experienceleague.adobe.com/en/docs/journey-optimizer-learn/tutorials/configuration/business-rules/configure-frequency-capping-rules)|Video |Learn how to configure frequency capping rules.| -->
 
 ### [!DNL Journey Optimizer] 的更多資源
 
@@ -512,10 +512,10 @@ New tutorials published for Adobe Marketo.
 
 |Published|Name|Type|Description |
 | -----------| ---------- | ---------- | ---------- |
-|September 2024|[Attribution AI overview](https://experienceleague.adobe.com/zh-hant/docs/marketo-measure-learn/tutorials/marketo-measure-ultimate/attribution-ai-overview)|Video |Discover how Adobe's Attribution AI enhances B2B marketing measurement with sophisticated AI/ML modeling, offering precise attribution insights and eliminating biases for accurate analysis.|
-|September 2024|[Marketo Measure Ultimate overview](https://experienceleague.adobe.com/zh-hant/docs/marketo-measure-learn/tutorials/marketo-measure-ultimate/overview)|Video |Learn how Marketo Measure Ultimate allows B2B marketers to gather data from almost any source, including multiple sources of the same type, for thorough attribution. |
-|September 2024|[API Help - How to set the Access token in a variable](https://experienceleague.adobe.com/zh-hant/docs/marketo-learn/tutorials/integrations/api-set-access-token-variable)|Video |Learn how to set up the Postman application and leverage variables to save data into the variable for reusability purposes. You will also learn how to make your first Marketo Engage REST API call to get the access token.|
-|September 2024|[Go live with Dynamic Chat in just 15 minutes](https://experienceleague.adobe.com/zh-hant/docs/marketo-learn/tutorials/dynamic-chat/go-live-in-15-minutes)|Video |Watch a step by step guide to help you go live with your first dialogue using Dynamic Chat in just 15 minutes.| -->
+|September 2024|[Attribution AI overview](https://experienceleague.adobe.com/en/docs/marketo-measure-learn/tutorials/marketo-measure-ultimate/attribution-ai-overview)|Video |Discover how Adobe's Attribution AI enhances B2B marketing measurement with sophisticated AI/ML modeling, offering precise attribution insights and eliminating biases for accurate analysis.|
+|September 2024|[Marketo Measure Ultimate overview](https://experienceleague.adobe.com/en/docs/marketo-measure-learn/tutorials/marketo-measure-ultimate/overview)|Video |Learn how Marketo Measure Ultimate allows B2B marketers to gather data from almost any source, including multiple sources of the same type, for thorough attribution. |
+|September 2024|[API Help - How to set the Access token in a variable](https://experienceleague.adobe.com/en/docs/marketo-learn/tutorials/integrations/api-set-access-token-variable)|Video |Learn how to set up the Postman application and leverage variables to save data into the variable for reusability purposes. You will also learn how to make your first Marketo Engage REST API call to get the access token.|
+|September 2024|[Go live with Dynamic Chat in just 15 minutes](https://experienceleague.adobe.com/en/docs/marketo-learn/tutorials/dynamic-chat/go-live-in-15-minutes)|Video |Watch a step by step guide to help you go live with your first dialogue using Dynamic Chat in just 15 minutes.| -->
 
 如需最新的產品文件，請參閱 [Marketo 產品文件](https://experienceleague.adobe.com/zh-hant/docs/marketo/using/home)首頁
 
@@ -525,7 +525,7 @@ New articles and updates to existing articles for [!DNL Marketo].
 
 |Published|Name|Type|Description|
 | -----------| ---------- | ---------- | ---------- |
-|April 2024|[What happens when the [!UICONTROL Default Dashboard] object is changed in [!DNL Marketo Measure]](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-24085)|New article| Learn about the effects of changing the [!UICONTROL Default Dashboard] object in [!DNL Marketo Measure] settings.|
+|April 2024|[What happens when the [!UICONTROL Default Dashboard] object is changed in [!DNL Marketo Measure]](https://experienceleague.adobe.com/en/docs/experience-cloud-kcs/kbarticles/ka-24085)|New article| Learn about the effects of changing the [!UICONTROL Default Dashboard] object in [!DNL Marketo Measure] settings.|
 
 {style="table-layout:auto"} -->
 
@@ -562,12 +562,12 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 |Published|Name|Type|Description|
 | -----------| ---------- | ---------- | ---------- |
-|December 2023|[[!DNL Workfront]: Apply layout template](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23173.html?lang=zh-Hant)|New article| Learn how to apply the layout template in four ways: [!UICONTROL User profile], [!UICONTROL Job Role], [!UICONTROL Home Team], and [!UICONTROL Home Group].|
-|December 2023|[[!DNL Workfront]: proof failed to generate](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23149.html?lang=zh-Hant)|New article| Learn how to resolve the `Proof Failed to Generate` error when you upload a new proof.|
-|December 2023|[[!DNL Fusion]: `Failed to verify connection '52174'. Status Code Error: 500`](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23142.html?lang=zh-Hant)|New article| Learn how to resolve the [!DNL Workfront Fusion] error, `Failed to verify connection '52174'. Status Code Error: 500`.|
-|December 2023|[[!DNL Workfront]: Stuck export](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23080.html?lang=zh-Hant)|New article| Learn how to resolve the issue if your [!UICONTROL Kick-start] export or a [!UICONTROL Resource Planner] export is stuck.|
-|December 2023|[[!DNL Workfront Fusion]: `JWT Connection Error` for [!DNL AEM Assets Fusion]](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22911.html?lang=zh-Hant)|New article| Learn how to resolve if a `JWT connection error` occurs while configuring a connection for [!DNL AEM Assets as a Cloud Service] using the [!DNL Fusion AEM Assets] module.|
-|December 2023|[Project sharing lists are automatically pre-populated on creating new projects](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23045.html?lang=zh-Hant)|New article| Learn how to resolve if project sharing lists get automatically pre-populated.|
+|December 2023|[[!DNL Workfront]: Apply layout template](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23173.html)|New article| Learn how to apply the layout template in four ways: [!UICONTROL User profile], [!UICONTROL Job Role], [!UICONTROL Home Team], and [!UICONTROL Home Group].|
+|December 2023|[[!DNL Workfront]: proof failed to generate](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23149.html)|New article| Learn how to resolve the `Proof Failed to Generate` error when you upload a new proof.|
+|December 2023|[[!DNL Fusion]: `Failed to verify connection '52174'. Status Code Error: 500`](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23142.html)|New article| Learn how to resolve the [!DNL Workfront Fusion] error, `Failed to verify connection '52174'. Status Code Error: 500`.|
+|December 2023|[[!DNL Workfront]: Stuck export](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23080.html)|New article| Learn how to resolve the issue if your [!UICONTROL Kick-start] export or a [!UICONTROL Resource Planner] export is stuck.|
+|December 2023|[[!DNL Workfront Fusion]: `JWT Connection Error` for [!DNL AEM Assets Fusion]](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22911.html)|New article| Learn how to resolve if a `JWT connection error` occurs while configuring a connection for [!DNL AEM Assets as a Cloud Service] using the [!DNL Fusion AEM Assets] module.|
+|December 2023|[Project sharing lists are automatically pre-populated on creating new projects](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23045.html)|New article| Learn how to resolve if project sharing lists get automatically pre-populated.|
 
 {style="table-layout:auto"}
 -->
@@ -680,16 +680,16 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 <!-- ## ![Icon](/assets/certification-badge.png) Certification{#certification}
 
-Attention all Adobe certification candidates! Visit the Experience Cloud [Certification](https://experienceleague.adobe.com/zh-hant/docs/certification/program/overview) site on Experience League. 
+Attention all Adobe certification candidates! Visit the Experience Cloud [Certification](https://experienceleague.adobe.com/en/docs/certification/program/overview) site on Experience League. 
 
 +++Details
 
-The [Experience Cloud Certification](https://experienceleague.adobe.com/zh-hant/docs/certification/program/overview) site is your one-stop shop for all [!DNL Experience Cloud] certification-related content and is updated regularly with:
+The [Experience Cloud Certification](https://experienceleague.adobe.com/en/docs/certification/program/overview) site is your one-stop shop for all [!DNL Experience Cloud] certification-related content and is updated regularly with:
 
 * Available certifications
 * Certification renewals for Adobe applications
 * Certification program updates
 
-And more! Head over to [Adobe Certification](https://experienceleague.adobe.com/zh-hant/docs/certification/program/overview) on Experience League and start your certification journey today!
+And more! Head over to [Adobe Certification](https://experienceleague.adobe.com/en/docs/certification/program/overview) on Experience League and start your certification journey today!
 
 +++ -->
